--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="__DESCRIPTION__" /> 
     <meta property="og:title" content="__FB_TITLE__" />
     <meta property="og:description" content="__FB_DESCRIPTION__" />
-    <meta property="og:image" content='__img__' />
+    <!-- <meta property="og:image" content='__img__' /> -->
     <!-- <meta name="description" content="आज प्रातः 6 बजे परम पूज्य बाबा जयगुरूदेव जी महाराज ने थाना गाजी"> -->
     <!-- <meta property="og:type" content="website" />
 <meta property="og:url" content="https://story4u.info/jgd-satsang/" />
